add accessibility page

--- a/pages/about.html
+++ b/pages/about.html
@@ -139,10 +139,12 @@
             don</button>
         <div class="logo-footer">
             <img tabindex="36" src="../images/image.png" alt="logo amar représentant un coeur">
-            <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
+            <p tabindex="37">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
-
+        <p tabindex="38"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="39">
+            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+        </p>
     </footer>
 </body>
 <script src="/js/index.js"></script>
