--- a/pages/project.html
+++ b/pages/project.html
@@ -47,12 +47,12 @@
                 système de sécurité sociale ne fonctionne pas de la même manière qu'en France.</p>
             <p tabindex="9">Les différentes structures disponibles, à l'exception des hôpitaux, dépendent entièrement des dons pour
                 fonctionner.</p>
-            <p>Pour remédier à cette situation, nous allons commencer avec deux structures pour ouvrir la voie, avec
+            <p tabindex="10">Pour remédier à cette situation, nous allons commencer avec deux structures pour ouvrir la voie, avec
                 l'ambition d'étendre notre initiative à l'échelle nationale.</p>
             <div class="img" >
-                <img src="/images/bloomhosp-mv045k301NuMgEP8(1).png" tabindex="10"
+                <img src="/images/bloomhosp-mv045k301NuMgEP8(1).png" tabindex="11"
                     alt="Logo Hospital nacional de ninos BENJAMIN BLOOM">
-                <img src="/images/hopac-AQE48Q0EOOcZXlj4.png" tabindex="11" alt="Logo HOPAC">
+                <img src="/images/hopac-AQE48Q0EOOcZXlj4.png" tabindex="12" alt="Logo HOPAC">
             </div>
         </section>
 
@@ -60,27 +60,27 @@
             <article class="left">
                 <article class="article">
                     <div class="title">
-                        <p tabindex="12" class="number">1</p>
-                        <p tabindex="13" class="subtitle">L'INVENTAIRE</p>
+                        <p tabindex="13" class="number">1</p>
+                        <p tabindex="14" class="subtitle">L'INVENTAIRE</p>
                     </div>
-                    <p tabindex="14" class="text">Un tri avec l’équipe médicale nous permet de vérifier l’état des appareillages
+                    <p tabindex="15" class="text">Un tri avec l’équipe médicale nous permet de vérifier l’état des appareillages
                         et
                         voir ceux qu’il faut reconditionner.</p>
                 </article>
                 <article class="article">
                     <div class="title">
-                        <p tabindex="18" class="number">3</p>
-                        <p tabindex="19" class="subtitle">LE VOYAGE</p>
+                        <p tabindex="19" class="number">3</p>
+                        <p tabindex="20" class="subtitle">LE VOYAGE</p>
                     </div>
-                    <p tabindex="20" class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
+                    <p tabindex="21" class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
                         l’atlantique. Hâte d’arriver à destination!</p>
                 </article>
                 <article class="article">
                     <div class="title">
-                        <p tabindex="24" class="number">5</p>
-                        <p tabindex="25" class="subtitle">L’INSPECTION</p>
+                        <p tabindex="25" class="number">5</p>
+                        <p tabindex="26" class="subtitle">L’INSPECTION</p>
                     </div>
-                    <p tabindex="26" class="text">Chaque appareillage est vérifié par les équipes médicales afin de donner un coup
+                    <p tabindex="27" class="text">Chaque appareillage est vérifié par les équipes médicales afin de donner un coup
                         de neuf si nécessaire, puis ils font un premier choix de patients qui recevront les
                         appareillages.</p>
                 </article>
@@ -88,26 +88,26 @@
             <article class="right">
                 <article class="article">
                     <div class="title">
-                        <p tabindex="15" class="number">2</p>
-                        <p tabindex="16" class="subtitle">LA COLLECTE</p>
+                        <p tabindex="16" class="number">2</p>
+                        <p tabindex="17" class="subtitle">LA COLLECTE</p>
                     </div>
-                    <p tabindex="17" class="text">Grâce à l’aide de nos partenaires en logistique, le transporteur vient chercher
+                    <p tabindex="18" class="text">Grâce à l’aide de nos partenaires en logistique, le transporteur vient chercher
                         les appareillages dans les centres médicaux.</p>
                 </article>
                 <article class="article">
                     <div class="title">
-                        <p tabindex="21" class="number">4</p>
-                        <p tabindex="22" class="subtitle">LE VOYAGE</p>
+                        <p tabindex="22" class="number">4</p>
+                        <p tabindex="23" class="subtitle">LE VOYAGE</p>
                     </div>
-                    <p tabindex="23" class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
+                    <p tabindex="24" class="text">Les appareillages prennent le large et pendant 1 mois ils traversent
                         l’atlantique. Hâte d’arriver à destination!</p>
                 </article>
                 <article class="article">
                     <div class="title">
-                        <p tabindex="27" class="number">6</p>
-                        <p tabindex="28" class="subtitle">LA DISTRIBUTION</p>
+                        <p tabindex="28" class="number">6</p>
+                        <p tabindex="29" class="subtitle">LA DISTRIBUTION</p>
                     </div>
-                    <p tabindex="29" class="text">Les appareillages sont arrivés aux centres médicaux et sont remis aux patients
+                    <p tabindex="30" class="text">Les appareillages sont arrivés aux centres médicaux et sont remis aux patients
                         avec une prise en main afin de s’assurer que l’appareillage corresponde bien au besoin du
                         patient.</p>
                 </article>
@@ -115,14 +115,17 @@
         </section>
     </div>
     <footer>
-        <h4 tabindex="30">Soutenez-nous !</h4>
-        <p tabindex="31">Vous voulez faire partie de l'aventure ?</p>
-        <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="32">Faire un don</button>
+        <h4 tabindex="31">Soutenez-nous !</h4>
+        <p tabindex="32">Vous voulez faire partie de l'aventure ?</p>
+        <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="33">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="33" src="../images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="34" src="../images/image.png" alt="logo amar représentant un coeur">
             <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p tabindex="34"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="35"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="36">
+            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+        </p>
 
     </footer>
 </body>
