--- a/pages/contact.html
+++ b/pages/contact.html
@@ -74,9 +74,12 @@
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="17">Faire un don</button>
         <div class="logo-footer">
             <img tabindex="18" src="../images/image.png" alt="logo amar représentant un coeur">
-            <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
+            <p tabindex="19">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="20"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="21">
+            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+        </p>
 
     </footer>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
