--- a/pages/template.html
+++ b/pages/template.html
@@ -37,9 +37,12 @@
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="0">Faire un don</button>
         <div class="logo-footer">
             <img tabindex="0" src="../images/image.png" alt="logo amar représentant un coeur">
-            <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
+            <p tabindex="0">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="0"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="0">
+            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+        </p>
 
     </footer>
 </body>
