--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMAR - Mobilité, Accessibilité et Réhabilitation | Association pour la mobilité, l'accessibilité et la réhabilitation</title>
     <meta name="description" content="Faites une différence avec notre association à but non lucratif - Don de matériel médical pour enfants avec handicap moteur au Salvador">
-    <link rel="stylesheet" href="/styles/main.css">
-    <link rel="stylesheet" href="/styles/template.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/template.css">
 </head>
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="/"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="3" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="4" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="logo"><a href="/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="4" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <div id="google_translate_element" tabindex="5" role="button" aria-label="Sélectionner la langue"></div>
         <script type="text/javascript">
             function googleTranslateElementInit() {
@@ -24,13 +24,13 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="#HOME"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="#HOME"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button tabindex="1" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="2" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="3" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <button tabindex="4" class="header">Langue</button>
     </nav>
     <Main>
@@ -38,7 +38,7 @@
             <h1 tabindex="5">           
                 Ensemble pour la mobilité des enfants avec un handicap moteur.
             </h1>
-            <img src="/images/asset 1.png" tabindex="6" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
+            <img src="images/asset 1.png" tabindex="6" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
         </section>
         <section class="First">
             <h1 tabindex="7">           
@@ -50,7 +50,7 @@
                     Elle aspire à améliorer leur qualité de vie en leur permettant d'accéder à des équipements adaptés.
                     L'objectif de A.M.A.R. est de créer un environnement inclusif où chaque personne a la possibilité de vivre et de s'épanouir pleinement dans la société.
                 </p>
-                <img src="/images/a.m.a.r.-identite-illustration-papillon.png" tabindex="9" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
+                <img src="images/a.m.a.r.-identite-illustration-papillon.png" tabindex="9" alt="Amar, Association pour la mobilité, L'accessibilité et la Réhabilitation">
             </section>
         </section>
         <section class="Second">
@@ -65,7 +65,7 @@
                     ne se réutilise pas et il finit la plupart du temps à la déchetterie.
                 </p>
                 <section>
-                    <img src="/images/asset 7.png" alt="dessin d'un Verticalisateur" tabindex="12"/>
+                    <img src="images/asset 7.png" alt="dessin d'un Verticalisateur" tabindex="12"/>
                     <h6 tabindex="13">Verticalisateur</h6>
                 </section>
             </section>
@@ -77,7 +77,7 @@
                     La vie, la santé et le confort de milliers d’enfants sera ainsi amélioré !
                 </p>
                 <section>
-                    <img src="/images/asset 5.png" alt="dessin d'un Fauteuil" tabindex="15"/>
+                    <img src="images/asset 5.png" alt="dessin d'un Fauteuil" tabindex="15"/>
                     <h6 tabindex="16">Fauteuil</h6>
                 </section>
             </section>
@@ -88,16 +88,16 @@
         <p tabindex="18">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="19">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="20" src="../images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="20" src="images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="21">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p tabindex="22"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="22"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
         <p tabindex="23">
-            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+            <a href="https://lucasrebl.github.io/inflation-amar/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
         </p>
     </footer>
 
 </body>
-<script src="/js/index.js"></script>
-<script src="/js/translate.js"></script>
+<script src="js/index.js"></script>
+<script src="js/translate.js"></script>
 </html>
