update link from template.html

--- a/pages/template.html
+++ b/pages/template.html
@@ -10,20 +10,27 @@
 
 <body>
     <header>
-        <button tabindex="0" class="logo"><a href="/"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="0" class="header"><a href="/pages/projet.html">Projet</a></button>
-        <button tabindex="0" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="0" class="header"><a href="/pages/contact.html">Contact</a></button>
-        <button tabindex="0" class="header">Langue</button>
+        <button tabindex="0" class="logo"><a href="/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
+        <div id="google_translate_element" tabindex="5" role="button" aria-label="Sélectionner la langue"></div>
+        <script type="text/javascript">
+            function googleTranslateElementInit() {
+                new google.translate.TranslateElement({ pageLanguage: 'fr', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+            }
+        </script>
+        <script type="text/javascript"
+            src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="0" class="logo"><a href="#HOME"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="0" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="0" class="logo"><a href="#HOME"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="0" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button tabindex="0" class="header"><a href="/pages/projet.html">Projet</a></button>
-        <button tabindex="0" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="0" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="0" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <button tabindex="0" class="header">Langue</button>
     </nav>
 
@@ -36,17 +43,16 @@
         <p tabindex="0">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="0">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="0" src="../images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="0" src="images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="0">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p tabindex="0"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="0"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
         <p tabindex="0">
-            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+            <a href="https://lucasrebl.github.io/inflation-amar/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
         </p>
-
     </footer>
 </body>
 
-<script src="/js/index.js"></script>
+<script src="js/index.js"></script>
 
 </html>
