--- a/pages/project.html
+++ b/pages/project.html
@@ -4,19 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/project.css">
+    <link rel="stylesheet" href="styles/project.css">
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <link rel="stylesheet" href="/styles/template.css">
+    <link rel="stylesheet" href="styles/template.css">
     <title>Accès à la mobilité pour les enfants au Salvador</title>
 </head>
 
 <body>
 
     <header>
-        <button tabindex="1" class="logo"><a href="/"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="3" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="4" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="logo"><a href="/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="4" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <div id="google_translate_element" tabindex="5" role="button" aria-label="Sélectionner la langue"></div>
         <script type="text/javascript">
             function googleTranslateElementInit() {
@@ -27,13 +27,13 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="#HOME"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="#HOME"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button tabindex="1" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="2" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="3" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <button tabindex="4" class="header">Langue</button>
     </nav>
     <div class="all">
@@ -50,9 +50,9 @@
             <p tabindex="10">Pour remédier à cette situation, nous allons commencer avec deux structures pour ouvrir la voie, avec
                 l'ambition d'étendre notre initiative à l'échelle nationale.</p>
             <div class="img" >
-                <img src="/images/bloomhosp-mv045k301NuMgEP8(1).png" tabindex="11"
+                <img src="images/bloomhosp-mv045k301NuMgEP8(1).png" tabindex="11"
                     alt="Logo Hospital nacional de ninos BENJAMIN BLOOM">
-                <img src="/images/hopac-AQE48Q0EOOcZXlj4.png" tabindex="12" alt="Logo HOPAC">
+                <img src="images/hopac-AQE48Q0EOOcZXlj4.png" tabindex="12" alt="Logo HOPAC">
             </div>
         </section>
 
@@ -119,17 +119,16 @@
         <p tabindex="32">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="33">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="34" src="../images/image.png" alt="logo amar représentant un coeur">
-            <p>Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
+            <img tabindex="34" src="images/image.png" alt="logo amar représentant un coeur">
+            <p tabindex="35">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p tabindex="35"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
-        <p tabindex="36">
-            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+        <p tabindex="36"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="37">
+            <a href="https://lucasrebl.github.io/inflation-amar/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
         </p>
-
     </footer>
 </body>
-<script src="/js/index.js"></script>
-<script src="/js/translate.js"></script>
+<script src="js/index.js"></script>
+<script src="js/translate.js"></script>
 
 </html>
