update link from contact.html

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -12,10 +12,10 @@
 
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="/"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="3" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="4" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="logo"><a href="/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="4" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <div id="google_translate_element" tabindex="5" role="button" aria-label="Sélectionner la langue"></div>
         <script type="text/javascript">
             function googleTranslateElementInit() {
@@ -26,13 +26,13 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="#HOME"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="#HOME"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button tabindex="1" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="2" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="3" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A Propos</a></button>
+        <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <button tabindex="4" class="header">Langue</button>
     </nav>
     <main>
@@ -65,7 +65,7 @@
         </section>
 
         <figure>
-            <img src="/images/asset14.png" alt="deux mains qui se serrent" />
+            <img src="images/asset14.png" alt="deux mains qui se serrent" />
         </figure>
     </main>
     <footer>
@@ -73,19 +73,18 @@
         <p tabindex="16">Vous voulez faire partie de l'aventure ?</p>
         <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="17">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="18" src="../images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="18" src="images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="19">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p tabindex="20"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="20"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
         <p tabindex="21">
-            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+            <a href="https://lucasrebl.github.io/inflation-amar/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
         </p>
-
     </footer>
     <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-    <script src="/js/contact.js"></script>
-    <script src="/js/index.js"></script>
-    <script src="/js/translate.js"></script>
+    <script src="js/contact.js"></script>
+    <script src="js/index.js"></script>
+    <script src="js/translate.js"></script>
 </body>
 
 </html>
