update link from accessibility.html

--- a/pages/accessibility.html
+++ b/pages/accessibility.html
@@ -9,18 +9,21 @@
     <meta name="description" content="Découvrez comment AMAR, une association dédiée à la promotion de la mobilité et de 
     l'accessibilité, améliore la qualité de vie des personnes en situation de handicap. Rejoignez-nous dans notre mission et 
     contribuez à rendre le monde plus accessible pour tous.">
-    <link rel="stylesheet" href="/styles/about.css">
-    <link rel="stylesheet" href="/styles/template.css">
+    <link rel="stylesheet" href="styles/about.css">
+    <link rel="stylesheet" href="styles/template.css">
 
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
 </head>
 
 <body>
     <header>
-        <button tabindex="1" class="logo"><a href="/"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="3" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="4" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="logo"><a href="/"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="header"><a
+                href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="3" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A
+                Propos</a></button>
+        <button tabindex="4" class="header"><a
+                href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <div id="google_translate_element" tabindex="5" role="button" aria-label="Sélectionner la langue"></div>
         <script type="text/javascript">
             function googleTranslateElementInit() {
@@ -31,13 +34,16 @@
             src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
     </header>
     <header class="mobile">
-        <button tabindex="1" class="logo"><a href="#HOME"><img src="/images/image.png" alt=""></a></button>
-        <button tabindex="2" class="burgermenu"><img src="/images/burgerbar.png" alt="Menu Burger"></button>
+        <button tabindex="1" class="logo"><a href="#HOME"><img src="images/image.png" alt=""></a></button>
+        <button tabindex="2" class="burgermenu"><img src="images/burgerbar.png" alt="Menu Burger"></button>
     </header>
     <nav class="headercontent">
-        <button tabindex="1" class="header"><a href="/pages/project.html">Projet</a></button>
-        <button tabindex="2" class="header"><a href="/pages/about.html">A Propos</a></button>
-        <button tabindex="3" class="header"><a href="/pages/contact.html">Contact</a></button>
+        <button tabindex="1" class="header"><a
+                href="https://lucasrebl.github.io/inflation-amar/pages/project.html">Projet</a></button>
+        <button tabindex="2" class="header"><a href="https://lucasrebl.github.io/inflation-amar/pages/about.html">A
+                Propos</a></button>
+        <button tabindex="3" class="header"><a
+                href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">Contact</a></button>
         <button tabindex="4" class="header">Langue</button>
     </nav>
     <main>
@@ -104,14 +110,14 @@
         </ul>
         <h2 tabindex="27">Pages du site ayant fait l’objet de la vérification de conformité</h2>
         <ul>
-            <li tabindex="28">page d’accueil [url]</li>
-            <li tabindex="29">page contact [url]</li>
-            <li tabindex="30">page mentions légales [url]</li>
-            <li tabindex="31">page accessibilité [url]</li>
-            <li tabindex="32">page projets [url]</li>
+            <li tabindex="28">page d’accueil [https://lucasrebl.github.io/inflation-amar/]</li>
+            <li tabindex="29">page contact [https://lucasrebl.github.io/inflation-amar/pages/about.html]</li>
+            <li tabindex="30">page accessibilité [https://lucasrebl.github.io/inflation-amar/pages/accessibility.html]</li>
+            <li tabindex="31">page projets [https://lucasrebl.github.io/inflation-amar/pages/project.html]</li>
         </ul>
-        <p tabindex="33">Retour d’information et contact
-            Si vous n’arrivez pas à accéder à un contenu ou à un service, vous pouvez contacter le responsable de
+        <p tabindex="32">Retour d’information et contact</p>
+        <p tabindex="33">Si vous n’arrivez pas à accéder à un contenu ou à un service, vous pouvez contacter le
+            responsable de
             Amar-handicap pour être orienté vers une alternative accessible ou obtenir le contenu sous une autre forme.
 
             Envoyer un message à contact@amar-handicap.org ;</p>
@@ -134,19 +140,18 @@
     <footer>
         <h4 tabindex="38">Soutenez-nous !</h4>
         <p tabindex="39">Vous voulez faire partie de l'aventure ?</p>
-        <button aria-label="Faire un don pour soutenir notre association" id="donButton" tabindex="40">Faire un
-            don</button>
+        <button aria-label="Faire un don pour soutenir notre association"  id="donButton"  tabindex="40">Faire un don</button>
         <div class="logo-footer">
-            <img tabindex="41" src="../images/image.png" alt="logo amar représentant un coeur">
+            <img tabindex="41" src="images/image.png" alt="logo amar représentant un coeur">
             <p tabindex="42">Association pour la Mobilité, l'Accessibilité et la Réhabilitation</p>
         </div>
-        <p tabindex="42"><a href="/pages/contact.html">contact@amar-handicap.org</a></p>
-        <p tabindex="43">
-            <a href="/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
+        <p tabindex="43"><a href="https://lucasrebl.github.io/inflation-amar/pages/contact.html">contact@amar-handicap.org</a></p>
+        <p tabindex="44">
+            <a href="https://lucasrebl.github.io/inflation-amar/pages/accessibility.html" style="text-decoration: underline;">Charte d'accessibilité</a>
         </p>
     </footer>
 </body>
-<script src="/js/index.js"></script>
-<script src="/js/translate.js"></script>
+<script src="js/index.js"></script>
+<script src="js/translate.js"></script>
 
 </html>
