--- a/pages/contact.html
+++ b/pages/contact.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contactez Amar</title>
     <link href='https://fonts.googleapis.com/css?family=DM Sans' rel='stylesheet'>
-    <link href="/styles/contact.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/styles/template.css">
+    <link href="styles/contact.css" rel="stylesheet" />
+    <link rel="stylesheet" href="styles/template.css">
 </head>
 
 <body>
